--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<p>hello</p>
 	<p>my fisrt git project</p>
 	
-	<h1> Hello </h1>
-	
+<h1> Hello </h1>
+<h3>	umar </h3>	
 	<h2> Hello World </h2>
 </html>
